made transition faster and fixed overflow problem in chrome browsers

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 html {
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
-    scroll-padding: 0.1rem;
+    scroll-padding-bottom: 0.1rem;
+    margin: 0;
+    padding: 0;
+    background-color: black;
 }
 
 .child {
